fix safari 9.1 scrollbar render credits width issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -105,12 +105,11 @@ a:active {
     top: 300px;
     margin-left: 50px;
     margin-right: 50px;
-    /* width: 88%; */
     padding-bottom: 100px;
     text-align: justify;
     background-color: #FFF;
-    display: none;
-    /* display: inline-block; */
+    display: inline-block;
+    visibility: hidden;
 }
 
 #credits-btn {
@@ -193,7 +192,7 @@ a:active {
     margin-top: 100%;
     width: 90%;
     cursor: pointer;
-    /* display: none; */
+    display: none;
 }
 
 .caption {
@@ -234,6 +233,12 @@ a:active {
 .block {
     padding-right: 5px;
     padding-bottom: 2px;
+    display: inline-block;
+}
+
+#credits > .block {
+    padding-right: 5px;
+    padding-bottom: 10px;
     display: inline-block;
 }
 
